# lifev-env-patches

./: CMakeLists.txt  LifeV_config.h.in  PackagesList.cmake  README.md
lifev/em/: CMakeLists.txt
lifev/em/cmake/: Dependencies.cmake
lifev/em/data/mesh/: bar_01mm.mesh  bar_05mm.mesh  cube4.mesh
lifev/em/examples/: CMakeLists.txt  lsf.o86598730
lifev/em/examples/FiberInterpolation/: CMakeLists.txt  ParamList1.xml  ParamList2.xml  main.cpp
lifev/em/examples/basicExample/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/basicExampleGHO/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/basicExampleHO/: CMakeLists.txt  ParamList.xml  data  main.cpp  mainCorrotto.cpp
lifev/em/examples/exampleGHO_withFiberRotation/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/exampleHO_ellipsoid/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/exampleHO_withFiberRotation/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/exampleStatic_GAHO/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/example_ActiveStrain/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/example_CalciumDependentActivation/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/example_EMBiVent/: .dataP2BiVent.swp  .dataP2SiVent.swp  CMakeLists.txt  ParamList.xml  circulation  data  dataP1SiVent  dataP2SiVent  inputfile  main.cpp
lifev/em/examples/example_EMBiVentMixed/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/example_EMCoupling/: BodyCirculation.cpp  BodyCirculation.h  CMakeLists.txt  Circulation.cpp  CirculationOld.h  FiberDirection.h5  FiberDirection.xmf  FiberDirectionP1.h5  ParamList.xml  SheetsDirection.h5  SheetsDirection.xmf  SheetsDirectionP2.h5  data  dataP1  dataP1BiVent  dataP1SiVent  dataP2SiVent  inputfile  main.cpp  singleVentricle.mesh  test2.cpp
lifev/em/examples/example_EMHeart/: .EssentialPatchBC.hpp.swp  .EssentialPatchBCCircular.hpp.swp  .EssentialPatchBCCircularSmooth.hpp.swp  .data.swp  .dataAHO.swp  CMakeLists.txt  EssentialPatchBC.hpp  EssentialPatchBCCircular.hpp  EssentialPatchBCCircularSmooth.hh  EssentialPatchBCCircularSmooth.hpp  EssentialPatchBCEllipseSmooth.hpp  EssentialPatchBCMovingPlane.cpp  EssentialPatchBCMovingPlane.h  EssentialPatchBCPatchReal.hpp  EssentialPatchBCPatchRealYZRotation.hpp  EssentialPatchBCRectangle.hpp  EssentialPatchBCShell.hpp  GenericFactory.hpp  HeartSolver.hpp  ParamList.xml  PatchBC.hpp  circulation  circulationEquil  data  dataAHO  dataOld  dataOld2  main.cpp  mainOld.cp  mainOld.cpp
lifev/em/examples/example_EMMaterial/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/example_EMMaterial2/: CMakeLists.txt  data  main.cpp
lifev/em/examples/example_EMSiVent/: CMakeLists.txt  circulation  data  main.cpp
lifev/em/examples/example_EMSolver/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/example_HeartOharaRudy/: CMakeLists.txt  data  main.cpp
lifev/em/examples/example_HolzapfelOgden/: CMakeLists.txt  data.txt  main.cpp  xmlParameters.xml
lifev/em/examples/example_XBridge/: CMakeLists.txt  data  main.cpp
lifev/em/examples/example_activatedNeoHookean/: CMakeLists.txt  data  main.cpp  xmlParameters.xml
lifev/em/examples/example_laplacian/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/example_passiveEMMaterial/: data  main.cpp
lifev/em/examples/linear_solver_preconditioner/: data  main.cpp
lifev/em/examples/linearizedGHO/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/linearizedGHObiventricle/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/linearizedGHOrotation/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/linearizedGHOventricle/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/examples/prestress/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/solver/: CMakeLists.txt  EMActiveStrainSolver.hpp  EMData.cpp  EMData.hpp  EMETAFunctors.hpp  EMEvaluate.hpp  EMGeneralizedActiveHolzapfelOgdenMaterial.hpp  EMHolzapfelOgdenMaterial.hpp  EMMixedSolver.hpp  EMSolver.hpp  EMSolver_old.hpp  EMStructuralOperator.hpp  ElectroETAMonodomainSolver.hpp  ElectroIonicModel.cpp  ElectroIonicModel.hpp  HeartData.hpp  HeartSolver.hpp  IonicMinimalModel.hpp  OLD_EMSolver.cpp
lifev/em/solver/activation/: Activation.hpp  ActivationModelsList.hpp  CMakeLists.txt
lifev/em/solver/circulation/: CMakeLists.txt  Circulation.hpp  CirculationAssembler.hpp  CirculationBCHandler.hpp  CirculationCoupling.hpp  CirculationDofHandler.hpp  CirculationElementFactory.hpp  CirculationGridView.hpp  CirculationIO.hpp  CirculationTimeIntegrator.hpp  CirculationVolumeIntegrator.hpp  Makefile  mainCoupling1.cpp  mainExample.cpp  mainExplicit.cpp  plotBodyCirculation.m  plotBodyCirculationV2.m
lifev/em/solver/electrophysiology/: CMakeLists.txt  EMMonodomainSolver.hpp  ElectroIonicModel.hpp  IonicMinimalModel.cpp  IonicMinimalModel.hpp  IonicModelsList.hpp
lifev/em/solver/mechanics/: CMakeLists.txt  EMActiveStructuralConstitutiveLaw.hpp  EMETAActiveStrainJacobianAssembler.hpp  EMETAActiveStrainResidualAssembler.hpp  EMETAJacobianAssembler.hpp  EMETAJacobianIsotropicAssembler.hpp  EMETAResidualAssembler.hpp  EMETAResidualIsotropicAssembler.hpp  EMElasticityFunctions.hpp  EMMechanicalExpressions.hpp  EMNeoHookeanActivatedMaterial.hpp  EMStructuralConstitutiveLaw.hpp  EMStructuralConstitutiveLawAHO.hpp  EMStructuralOperator.hpp
lifev/em/testsuite/: CMakeLists.txt
lifev/em/testsuite/EMBenchmark/: CMakeLists.txt  ParamList.xml  data  main.cpp  stimulus
lifev/em/testsuite/EMCell/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/testsuite/EMMyocyte/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/testsuite/EMVentricle/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/testsuite/test_EMSolver/: CMakeLists.txt  data  main.cpp
lifev/em/testsuite/test_HDF5toVTK/: CMakeLists.txt  ParamList.xml  data  main.cpp
lifev/em/util/: CMakeLists.txt  EMUtility.cpp  EMUtility.hpp
(+421 files in other folders)
