SET( solver_mechanics_HEADERS
CACHE INTERNAL "")


SET(LOCAL_HEADERS)
FOREACH(INC ${solver_IonicModels_HEADERS})
  STRING(REPLACE "solver/mechanics/" "" LOCAL_INC ${INC})
  SET(LOCAL_HEADERS ${LOCAL_HEADERS} ${LOCAL_INC})
ENDFOREACH()

INSTALL(
  FILES ${LOCAL_HEADERS}
  DESTINATION "${${PROJECT_NAME}_INSTALL_INCLUDE_DIR}/lifev/em/solver/mechanics/"
  COMPONENT ${PACKAGE_NAME}
)
